--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.goole.com" }
         maven { url "https://jitpack.io" }
     }
 }
