--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,19 +51,33 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    //data binding
-    //kapt 'com.android.databinding:compiler:3.1.4'
-
+    //support
     implementation 'com.android.support:appcompat-v7:28.0.0'
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
-
+    //anko
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
-
+    //utils
     implementation 'com.blankj:utilcode:1.23.7'
+    //toast
     implementation 'com.github.GrenderG:Toasty:1.4.1'
+    //https://github.com/gyf-dev/ImmersionBar
+    implementation 'com.gyf.immersionbar:immersionbar:2.3.3'
+
+    //data binding
+    kapt 'com.android.databinding:compiler:3.1.4'
+
     //https://github.com/afollestad/material-dialogs
     //implementation 'com.afollestad.material-dialogs:core:2.6.0'
+
+    //rx android
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
