--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
     //https://github.com/afollestad/material-dialogs
     //implementation 'com.afollestad.material-dialogs:core:2.6.0'
-
+    implementation 'com.safframework.log:saf-logginginterceptor:1.4.0'
     //rx android
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
