--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,10 @@ android {
         }
     }
 
-
-    dataBinding{
-        enabled = true
-    }
+//
+//    dataBinding {
+//        enabled = true
+//    }
 
 
     lintOptions {
@@ -80,5 +80,9 @@ dependencies {
     //https://github.com/fengzhizi715/SAF-Kotlin-Utils
     implementation 'com.safframework.utils:saf-kotlin-utils:0.1.1'
     //implementation 'com.safframework.utils:saf-kotlin-ext:0.1.1'
+    def lifecycle_version = "1.1.1"
+    // ViewModel and LiveData
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    kapt 'android.arch.lifecycle:compiler:1.1.1'
 
 }
