--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".test.TestActivity"></activity>
         <activity
             android:name=".view.activity.SplashActivity"
             android:configChanges="orientation|screenSize"
@@ -22,26 +23,26 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!--适配（设计稿尺寸）-->
+        </activity> <!-- 适配（设计稿尺寸） -->
         <meta-data
             android:name="design_width_in_dp"
-            android:value="360"/>
+            android:value="360" />
         <meta-data
             android:name="design_height_in_dp"
-            android:value="640"/>
-
-        <!--适配华为（huawei）刘海屏-->
+            android:value="640" /> <!-- 适配华为（huawei）刘海屏 -->
         <meta-data
             android:name="android.notch_support"
-            android:value="true"/>
-        <!--适配小米（xiaomi）刘海屏-->
+            android:value="true" /> <!-- 适配小米（xiaomi）刘海屏 -->
         <meta-data
             android:name="notch.config"
             android:value="portrait|landscape" />
 
-        <activity android:name=".view.activity.WeclomeActivity"
+        <activity
+            android:name=".view.activity.LoginActivity"
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.activity.WeclomeActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".view.activity.HomeActivity" />
     </application>
