--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,10 @@ android {
         }
     }
 
-//
-//    dataBinding {
-//        enabled = true
-//    }
+
+    dataBinding {
+        enabled = true
+    }
 
 
     lintOptions {
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     //utils
     implementation 'com.blankj:utilcode:1.23.7'
     //toast
@@ -80,7 +82,7 @@ dependencies {
     //https://github.com/fengzhizi715/SAF-Kotlin-Utils
     implementation 'com.safframework.utils:saf-kotlin-utils:0.1.1'
     //implementation 'com.safframework.utils:saf-kotlin-ext:0.1.1'
-    def lifecycle_version = "1.1.1"
+   // def lifecycle_version = "1.1.1"
     // ViewModel and LiveData
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     kapt 'android.arch.lifecycle:compiler:1.1.1'
