--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,15 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled true
+
+        //指定room.schemaLocation生成的文件路径
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -78,6 +87,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    //room
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'//use kapt for Kotlin
+    // optional - RxJava support for Room
+    implementation 'android.arch.persistence.room:rxjava2:1.1.1'
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation 'android.arch.persistence.room:guava:1.1.1'
+    // Test helpers
+    testImplementation 'android.arch.persistence.room:testing:1.1.1'
 
     //https://github.com/fengzhizi715/SAF-Kotlin-Utils
     implementation 'com.safframework.utils:saf-kotlin-utils:0.1.1'
@@ -86,5 +104,7 @@ dependencies {
     // ViewModel and LiveData
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     kapt 'android.arch.lifecycle:compiler:1.1.1'
+
+    implementation 'com.android.support:multidex:1.0.3'
 
 }
