--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     implementation 'com.safframework.log:saf-logginginterceptor:1.4.0'
     //rx android
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
@@ -89,8 +89,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     //room
     implementation 'android.arch.persistence.room:runtime:1.1.1'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'//use kapt for Kotlin
+    //annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'//use kapt for Kotlin
+    kapt 'android.arch.persistence.room:compiler:1.1.1'
     // optional - RxJava support for Room
+    //implementation 'android.arch.persistence.room:rxjava2:1.1.1'
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
     // optional - Guava support for Room, including Optional and ListenableFuture
     implementation 'android.arch.persistence.room:guava:1.1.1'
@@ -100,7 +102,7 @@ dependencies {
     //https://github.com/fengzhizi715/SAF-Kotlin-Utils
     implementation 'com.safframework.utils:saf-kotlin-utils:0.1.1'
     //implementation 'com.safframework.utils:saf-kotlin-ext:0.1.1'
-   // def lifecycle_version = "1.1.1"
+    // def lifecycle_version = "1.1.1"
     // ViewModel and LiveData
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     kapt 'android.arch.lifecycle:compiler:1.1.1'
