--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,9 @@ android {
     }
 
 
-    lintOptions {
-        abortOnError false
-    }
+//    lintOptions {
+//        abortOnError true
+//    }
 }
 
 dependencies {
