--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.maple.demo.kotlinmvvm">
 
+    <!--允许访问网络权限-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".app.MyApplication"
         android:allowBackup="true"
